src/test/deca/context/valid/logic/and.deca
// Description:
//    Programme valide ayant pour but de tester le et logique.
//
// Resultats:
//    c=true;

{
    boolean c = (true && true);
}