src/test/deca/context/invalid/print/print-incompatible.deca
// Description:
//    Programme minimaliste d'un booleen comme parametre de print.
//
// Resultats:
//    Erreur ligne 9

{
    bool a = true;
    print(a);
}